adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,8 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
     Animi ratione consequuntur, dolorem reprehenderit repudiandae quas recusandae nisi pariatur cupiditate necessitatibus 
     consequatur asperiores laudantium, illo nostrum quidem, iusto ab dolor sed.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+    Itaque blanditiis laudantium eos sapiente ex? Laborum dolorum voluptate doloremque, 
+    voluptas doloribus molestiae ullam voluptatem labore sequi magni? A quo perspiciatis natus.</p>
 </body>
 </html>
